[WebGPU] Some api,operation,command_buffer,image_copy fail as last row bytes are not copied correctly https://bugs.webkit.org/show_bug.cgi?id=271389 <radar://125172306>

Reviewed by Tadeu Zagallo.

The last row of the iamge should only copy blockSize * widthInBlocks blocks,
not the entire bytesPerRow * height as had been done previously.

* Source/WebGPU/WebGPU/Queue.mm:
(WebGPU::Queue::writeTexture):

Canonical link: https://commits.webkit.org/276562@main